# Quantum-Cryptography-BB84-IBM-visualization

Backend/: README.md  pyproject.toml  requirements.txt  run_bb84.ps1  wsgi.py
Backend/bb84_service/: __init__.py  __main__.py  app.py  backends.py  config.py  exceptions.py  protocol.py
FrontEnd/: imGui-Anti-Cheat.sln
FrontEnd/imGui-Anti-Cheat/: imGui-Anti-Cheat.cpp  imGui-Anti-Cheat.vcxproj  imGui-Anti-Cheat.vcxproj.filters  imgui.ini
FrontEnd/imGui-Anti-Cheat/dependencies/: dll_bytes.h  imgui.cpp  imgui_widgets.cpp
FrontEnd/imGui-Anti-Cheat/x64/Debug/: CompromiseQC.exe.recipe  imGui-Anti-Cheat.exe.recipe  vc143.idb  vc145.idb
FrontEnd/imGui-Anti-Cheat/x64/Debug/CompromiseQC.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CompromiseQC.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
FrontEnd/imGui-Anti-Cheat/x64/Debug/imGui-Anti-Cheat.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  imGui-Anti-Cheat.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
